force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <description>Flashcard card representing a single study item.</description>
    <label>Card</label>
    <nameField>
        <displayFormat>Card-{0000}</displayFormat>
        <label>Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>