force-app/main/default/objects/Card__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Answer for flashcard.</description>
    <inlineHelpText>Answer for flashcard.</inlineHelpText>
    <label>Answer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>