force-app/main/default/objects/Card__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deck</label>
    <referenceTo>Deck__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>