force-app/main/default/objects/Card__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Prompt for flashcard</description>
    <inlineHelpText>Prompt for flashcard</inlineHelpText>
    <label>Question</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>