force-app/main/default/objects/Card__c/listViews/CompTIA_Security.listView-meta.xml
<ListView>
    <fullName>CompTIA_Security</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deck__c</field>
        <operation>equals</operation>
        <value>CompTIA Security+</value>
    </filters>
    <label>CompTIA Security+</label>
</ListView>